Added Search Tab in main page

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   display: inline-block;
   background: #f9690e;
   font-size: 1.75em;
-  font-weight: bold;
+  font-weight: bolder;
   color: white;
   width: 100%;
   text-align: center;
