--- a/src/Main.css
+++ b/src/Main.css
@@ -1,6 +1,6 @@
 .main {
   background-color: #81cfe0;
-  width: 150vh;
+  width: 75%;
 }
 
 .tabs-box {
@@ -11,6 +11,22 @@
   padding: 10px 10px;
 }
 
+.main-tabs {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
 .main-form {
-  margin: 5vh 0;
+  min-height: 50vh;
+  margin-top: 50px;
+}
+
+.submit-button {
+    background: #f9690e;
+    margin: auto;
+    font-weight: bolder;
+    color: white;
+    font-size: 2em;
+    margin-top: 1em;
+    padding: 0 2em;
 }
